NIFI-11778 fix nifi-elasticsearch-restapi-processor tests for NiFi 1.x